(fix tmux) tmux plugin error fix split and create lazygit and lazydocker

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,6 +25,10 @@ bind-key -n C-S-Right swap-window -t +1 \; next-window
 
 #### basic settings
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+
 set-option -g status-justify "left"
 #set-option utf8-default on
 #set-option -g mouse-select-pane
